Aggiunta l'indicazione esplicita del linguaggio (bash) per le sequenze di comandi per l'installazione su Mac OS X

--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -596,7 +596,7 @@ A questo punto bisogna estrarre il contento
 degli archivi in una cartella temporanea, aprire una sessione di
 terminale e portarsi nella cartella appena creata. I dizionari si
 installano dando i comandi
-\begin{lstlisting}
+\begin{lstlisting}[language=bash]
 $ ./configure
 $ make
 $ sudo make install
@@ -631,7 +631,7 @@ bisogna scaricare l'archivio compresso \filestyle{auctex-11.87.tar.gz}.  Se ne
 estragga poi il contenuto in una cartella temporanea, si apra una sessione di
 terminale e ci si porti nella cartella appena creata.  Bisogna poi configurare
 \auctex{} con il comando
-\begin{lstlisting}[flexiblecolumns, breaklines=false]
+\begin{lstlisting}[flexiblecolumns, breaklines=false, language=bash]
 $ ./configure 
 --prefix=/Applications/Emacs.app/Contents/Resources/ 
 --with-emacs=/Applications/Emacs.app/Contents/MacOS/Emacs 
@@ -647,7 +647,7 @@ precedente deve essere scritto nel terminale su una sola riga, sostituendo le
 interruzioni di linea con spazi.
 
 Infine si compili e si installi dando
-\begin{lstlisting}
+\begin{lstlisting}[language=bash]
 $ make && make install
 \end{lstlisting}
 
