Aggiorno il Copyright e la versione.

--- a/guidaemacsauctex.sty
+++ b/guidaemacsauctex.sty
@@ -1,4 +1,4 @@
-%% Copyright (C) 2010-2013 M. Giordano, O. Iovino, M. Leccardi.
+%% Copyright (C) 2010-2014 by M. Giordano, O. Iovino, M. Leccardi.
 %%
 %% Quest'opera è distribuita con licenza Creative Commons,
 %%  + Attribuzione
@@ -10,7 +10,7 @@
 %% sito ufficiale http://creativecommons.org/licenses/by-nc-sa/3.0/it
 
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesPackage{guidaemacsauctex}[2013/04/06 v.1.0.1 Preambolo di guidaemacsauctex.tex]
+\ProvidesPackage{guidaemacsauctex}[2014/01/28 v.1.0.2 Preambolo di guidaemacsauctex.tex]
 
 \RequirePackage{ccicons}
 \RequirePackage{booktabs}
