--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -1,4 +1,4 @@
-%% Copyright (C) 2010-2013 M. Giordano, O. Iovino, M. Leccardi.
+%% Copyright (C) 2010-2014 by M. Giordano, O. Iovino, M. Leccardi.
 %%
 %% Quest'opera è distribuita con licenza Creative Commons,
 %%  + Attribuzione
@@ -10,7 +10,7 @@
 %% sito ufficiale http://creativecommons.org/licenses/by-nc-sa/3.0/it
 
 \documentclass[b5paper,11pt,oneside]{guidatematica}
-\ProvidesFile{guidaemacsauctex.tex}[2013/12/01 v.1.1.4 Breve guida all'uso di Emacs per LaTeX]
+\ProvidesFile{guidaemacsauctex.tex}[2014/01/28 v.1.1.5 Breve guida all'uso di Emacs per LaTeX]
 
 \usepackage{guidaemacsauctex}
 
