Correggo un refuso.

--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -10,7 +10,7 @@
 %% sito ufficiale http://creativecommons.org/licenses/by-nc-sa/3.0/it
 
 \documentclass[b5paper,11pt,oneside]{guidatematica}
-\ProvidesFile{guidaemacsauctex.tex}[2014/01/28 v.1.1.6 Breve guida all'uso di Emacs per LaTeX]
+\ProvidesFile{guidaemacsauctex.tex}[2014/01/28 v.1.1.7 Breve guida all'uso di Emacs per LaTeX]
 
 \usepackage{guidaemacsauctex}
 
@@ -212,7 +212,7 @@ che si ottiene con il tasto \keys{?}.
 %% Windows
 %% --------------------------------------------------------------------------
 
-\chapter{Installare \emacs{} e AUCTeX}
+\chapter{Installare \emacs{} e \auctex}
 \label{chap:installazione}
 
 In questo capitolo vedremo come installare \emacs, \auctex, il
