Correggo un refuso.

--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -10,7 +10,7 @@
 %% sito ufficiale http://creativecommons.org/licenses/by-nc-sa/3.0/it
 
 \documentclass[b5paper,11pt,oneside]{guidatematica}
-\ProvidesFile{guidaemacsauctex.tex}[2014/01/28 v.1.1.7 Breve guida all'uso di Emacs per LaTeX]
+\ProvidesFile{guidaemacsauctex.tex}[2014/01/28 v.1.1.8 Breve guida all'uso di Emacs per LaTeX]
 
 \usepackage{guidaemacsauctex}
 
@@ -70,7 +70,7 @@ documenti in \LaTeX\ e in altri formati legati al programma di tipocomposizione
 % (https://research.microsoft.com/en-us/people/mbudiu/), come Lamport, quindi
 % l'intervista dovrebbe essere attendibile.
 
-In questa guida tematica parleremo del programma \filestyle{GNU Emacs} (ovvero
+In questa guida tematica parleremo del programma \progstyle{GNU Emacs} (ovvero
 del programma \emacs\ del progetto GNU, mentre non si accennerà alle sue diverse
 varianti) e del pacchetto \auctex.  Si spiegherà come installarli e configurarli
 sui tre principali sistemi operativi in circolazione (Windows, GNU/Linux e
