--- a/guidaemacsauctex.sty
+++ b/guidaemacsauctex.sty
@@ -21,6 +21,7 @@
 
 % listings è caricato dalla classe guidatematica.cls
 \lstset{
+	frame=single,
   language=lisp,
   morekeywords={add-hook,add-to-list,eval-after-load,quote,setq,setq-default},
   basicstyle=\small\ttfamily,
