aggiorno mio indirizzo email

--- a/guidaemacsauctex.tex
+++ b/guidaemacsauctex.tex
@@ -10,7 +10,7 @@
 %% sito ufficiale http://creativecommons.org/licenses/by-nc-sa/3.0/it
 
 \documentclass[b5paper,11pt,oneside]{guidatematica}
-\ProvidesFile{guidaemacsauctex.tex}[2014/01/29 v.1.1.9 Breve guida all'uso di Emacs per LaTeX]
+\ProvidesFile{guidaemacsauctex.tex}[2014/07/12 v.1.1.9 Breve guida all'uso di Emacs per LaTeX]
 
 \usepackage{guidaemacsauctex}
 
@@ -113,7 +113,7 @@ qui riportati.
   \begin{minipage}{0.6\textwidth}\centering
     \textsc{Gli autori}                           \\[1.5ex]
     \textsc{Mosè Giordano}                        \\
-    \texttt{giordano dot mose at libero dot it}   \\[0.5ex]
+    \texttt{mose at gnu dot org}                  \\[0.5ex]
     \textsc{Orlando Iovino}                       \\
     \texttt{orlando dot iovino at yahoo dot it}   \\[0.5ex]
     \textsc{Matteo Leccardi}                      \\
